@@ -71,6 +71,8 @@ SpriteToggleButton.cpp \
 serialWebRequests.cpp \
 balance.cpp \
 PaymentReportPage.cpp \
+CheckboxBox.cpp \
+
 
 
 GAME_GRAPHICS = \
@@ -92,6 +94,8 @@ graphics/musicOn.tga \
 graphics/musicOff.tga \
 graphics/diffHighlightsOn.tga \
 graphics/diffHighlightsOff.tga \
+graphics/checkMark.tga \
+graphics/checkMarkOff.tga \
 
 
 
